--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,31 @@
-$border:1px solid #ccc;
+@import "_variebles";
+@import "~normalize.css";
+@import "fonts.scss";
+
+
+
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+.container {
+    padding-top: 2rem;
+    min-width: 1000px;
+    margin: 0 auto;
+}
+
+h1 {
+    text-align: center;
+}
+
+.logo {
+    background-image: url("../image/webpack-logo.png");
+    background-size: cover;
+    height: 200px;
+    width: 200px;
+    margin: 0 auto;
+    border: blue solid 2px;
+}
 
 .card {
     padding: 1rem;
