--- a/src/index.pug
+++ b/src/index.pug
@@ -3,15 +3,7 @@ html
 	head
 		title= "Document"
 	body
-		div.container
-			h1 WebPack in js
-			hr
-			div.logo
-
-			hr
-			div.card
-				h2 SCSS
-			div.cath
-				h3 Hello World
-				h4 Privet
-				h6 Proba
+		main
+			include ./components/header.pug 
+			include ./components/content.pug
+			include ./components/footer.pug
