--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -2,3 +2,13 @@
     font-family: 'Roboto';
     src: url("../fonts/Roboto-Regular.ttf") format('truetype');
 }
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url("../fonts/Montserrat-Bold.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url("../fonts/Montserrat-Regular.ttf") format('truetype');
+}
