--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,14 +1,9 @@
 @font-face {
-    font-family: 'Roboto';
-    src: url("../fonts/Roboto-Regular.ttf") format('truetype');
-}
-
-@font-face {
     font-family: 'Montserrat';
     src: url("../fonts/Montserrat-Bold.ttf") format('truetype');
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Regular';
     src: url("../fonts/Montserrat-Regular.ttf") format('truetype');
 }
