--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -6,6 +6,7 @@ header
                 a(href='#') О нас
             li.top-menu_item 
                 a(href='#') Услуги
+                span.material-icons e5cf
             li.top-menu_item 
                 a(href='#') Вакансии
             li.top-menu_item 
