--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,11 +3,11 @@
 @import "fonts.scss";
 
 
-
-
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
+
 }
 
 a {
@@ -18,14 +18,17 @@ a {
 main {
     display: grid;
     grid-template-rows: 70px auto 440px;
+    width: 100%;
+    max-width: 1920px;
+    min-width: 320px;
 }
 
 
 header {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    width: 1440px;
+    flex-flow: row wrap;
+    justify-content: start;
+    width: 100%;
     height: 70px;
 }
 
@@ -33,20 +36,21 @@ header {
     background-image: url("../image/logo.png");
     background-repeat: no-repeat;
     height: 40px;
-    width: 110px;
-    margin-left: 140px;
-    margin-top: 15px;
+    width: 106px;
+    margin: 1rem 7rem;
     color: black;
 }
 
 .navigation {
     width: 446px;
+    height: 18px;
     font: 14px "Montserrat-Regular", sans-serif;
-    color: rgba(31,32,65,0.5);
+    margin: 1.625rem 1.25rem 1.25rem 17.875rem;
 }
 
 .top-menu {
     display: flex;
+    //flex-flow: row wrap;
     align-items: center;
     margin: 0;
     padding: 0;
@@ -54,9 +58,12 @@ header {
     
     .top-menu_item {
         list-style-type: none;
-        padding: 20px 10px;
-        margin-left: 5px;
-       
+        padding-right: 26px;
+        //padding: 20px 10px;
+        //margin-left: 5px;
+            a {
+                color:$dark;
+            }
        
     }
 }
@@ -70,7 +77,7 @@ header {
 
 
 .conteiner {
-    width: 1440px;
+   // width: 1440px;
     height: 961px;
     background-image: url(../image/start_content.jpg);
     background-size: cover;
