--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -6,14 +6,15 @@ header
                 a(href='#') О нас
             li.top-menu_item 
                 a(href='#') Услуги
-                span.material-icons e5cf
+                    span(class="fa", class="fa-angle-down", aria-hidden="true")
             li.top-menu_item 
                 a(href='#') Вакансии
             li.top-menu_item 
                 a(href='#') Новости
             li.top-menu_item 
                 a(href='#') Соглашения
-    div.button.entrance
-        button.button_entrance Войти
+    div.entrance
+        button.button_entrance 
+            a(href='#') Войти
     div.button.register
         button.button_register Зарегистрироваться
