--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -7,3 +7,8 @@
     font-family: 'Montserrat-Regular';
     src: url("../fonts/Montserrat-Regular.ttf") format('truetype');
 }
+
+@font-face {
+    font-family: 'FontAwesome';
+    src: url("../fonts/font-awesome/fonts/fontawesome-webfont.ttf") format('truetype');
+}
