Добил верхнее меню

--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -1,19 +1,7 @@
 header
     div.logo 
     nav.navigation 
-        div.navigation__menu
-            a(href="#") О нас
-            div.arrow
-        div.navigation__menu
-            a(href="#") Услуги
-        div.navigation__menu
-            a(href="#") Вакансии
-        div.navigation__menu
-            a(href="#") Новости
-        div.navigation__menu
-            a(href="#") Соглашения
-            div.arrow
-        //ul.top-menu
+        ul.top-menu
             li.top-menu__item
                 a(href='#') О нас
             li(class="top-menu__item" class="top-menu__arrow") 
@@ -25,7 +13,7 @@ header
                 a(href='#') Новости
             li(class="top-menu__item" class="top-menu__arrow") 
                 a(href='#') Соглашения
-                div.arrow
+                div.arrow2
     div.entrance
         button.button__entrance 
             a(href='#') Войти
