--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -14,8 +14,7 @@ header
             li(class="top-menu__item" class="top-menu__arrow") 
                 a(href='#') Соглашения
                 div.arrow2
-    div.entrance
-        button.button__entrance 
-            a(href='#') Войти
-    div.button.register
-        button.button__register Зарегистрироваться
+    button(class="button" class="entrance")
+        a(class='button__entrance' href='#') Войти
+    button(class="button" class="register")
+        a(class='button__register' href='#') Зарегистрироваться
