--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,7 +25,7 @@ main {
 
 header {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     justify-content: start;
     width: 100%;
     height: 70px;
@@ -93,22 +93,35 @@ header {
 }
 
 
+.button {
+        border-radius: 22px;
+        border:solid 2px $purpl ;
+        margin-top: 18px;
+        margin-bottom: 18px;
+        .button__entrance, .button__register {
+            font-family: "Montserrat", sans-serif;
+            font-size: 12px;
+            color:$purpl;
+        }  
+    }
+
+
 .entrance {
     width: 87px;
     height: 34px;
-    margin: 18px 20px;
-    .button_entrance {
-        width: 87px;
-        height: 34px;
-        border-radius: 22px;
-        border-width: 4px;
-        padding: 0;
-        border-image-slice: 1;
-        border-image: linear-gradient(top bottom, rgba(188, 156, 255, 1), rgba(139, 164, 249, 1));
-            a {
-                background: #fff;
-            }
-    }
+    padding: 5px 20px;
+    background: #fff;
+    margin-right: 20px;
+}
+
+.register {
+    width: 196px;
+    height: 34px;
+    padding: 5px 25px;
+    background: $purpl;
+        .button__register {
+            color: #fff;
+        }
 }
 
 
